<resources>
    <string name="app_name">Buddi</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    /** Google map key **/
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
       AIzaSyB44SEXp2dClRqPnSp4EcPw0Yl5Fji4HkA
    </string>

    <string name="stripe_key">pk_test_66bTUhQFTPY6wY5x2hftqF6l</string>
    <!--<string name="stripe_key">pk_live_kThm0Vk9Vmpb6z58SaMrPXpD</string>-->


    /** facebook **/
    <string name="facebook_app_id">1934978090076246</string>
    <string name="fb_login_protocol_scheme">fb1934978090076246</string>

    <string name="forgotpassword_desc">Do not worry just enter your email address below \n
        we will send you the password reset instructions.
    </string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="mobile_verification">We haveve sent you a verification code to the number you provided! Enter it below.</string>
    <string name="next">Next</string>

    <string name="upload">Upload</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="session_duration">Choose a session duration</string>

    <string name="enter_zipcode">ENTER ZIPCODE</string>

    <string name="list_gym_sub">List any current gym subscriptions you currently have?</string>
    <string name="what_zipcode">Enter your exact zip code, which can list your profile perfectly.</string>
    <string name="access_military_instalations">Do you have access to military installations?</string>
    <string name="text_training_history">Nice! Now tell us about your training history.</string>
    <string name="text_how_long_training">How long have you been training seriously?</string>
    <string name="have_cometed_category">Have you ever competed in the category that you choose?</string>

    <string name="have_coached_category">Have you ever coached anybody in this category?</string>

    <string name="certified_personal">Are you currently a certified personal trainer?</string>

    <string name="please_select_gym"> Choose any gym subscriptions you have on this list.</string>
    <string name="more_information">Just a little more information:</string>
    <string name="list_1rep_movement">Choose all that apply to the category you wish to coach:</string>
    <string name="current_weight_text">What is your current weight?</string>
    <string name="pounds_text">Have you ever lost or gained 12+ pounds within a 6 months period?</string>
    <string name="knowledge_text">How knowledgeable are you about exercise nutrition?</string>
    <string name="before_video_titile">Sweet! Now its time for you to show us what you have got!</string>

    <string name="before_video_desc">This is the most important part of this process. You will now record or upload (a recent video) of you doing each movement that applies to the categories you wish to coach. Be sure to follow the rules for each video (listed on each respective screen). Standards will be uniform for males and uniform for females. These videos will be used to screen you for your qualification to coach others in these movements. Good luck!
-The Buddi team </string>
    <string name="video_desc">*Videos should be anywhere between 30-90 seconds long. Try to keep them as short and to the point as possible.It would be beneficial to have someone record the videos for you.
</string>


    <string name="please_accept_terms">Please accept <u>Terms of Use, Privacy Policy and Disclaimer</u></string>
    <string name="male_squat_desc"><b>Males:</b>
-Video 1: Record yourself doing 1 rep with 135lb.on the bar from 2 different angles.
-Video 2: Record yourself doing 1 rep with your body weight on the bar from 2 different angles.
</string>
    <string name="female_squat_desc"><b>Females:</b>
-Video 1: Record yourself doing 1 rep with 95 lb on the bar from 2 different angles.
-Video 2: Record yourself doing 1 rep with your body weight on the bar form 2 different angles.</string>


    <string name="male_deadlift_desc">Males:-\n Video 1: Record yourself doing 1 rep with 155lb on the bar from 2 different angles.\n Video 2: Record yourself doing 1 rep with your body weight on the bar from 2 different angles.
</string>
    <string name="female_deadlift_desc">Females:-\n Video 1: Record yourself doing 1 rep with 135lb on the bar from 2 different angles.\n Video 2: Record yourself doing 1 rep with your body weight on the bar from 2 different angles. </string>


    <string name="male_bench_press_desc">Males:-\n Video 1: Record yourself doing 1 rep with 135lb on the bar from 2 different angles.\n Video 2: Record yourself doing 1 rep with your body weight on the bar from 2 different angles.
</string>
    <string name="female_bench_press_desc">Females:-\n Video 1: Record yourself doing 1 rep with 65lb on the bar from 2 different angles.\n Video 2: Record yourself doing 1 rep with 95 lb on the bar from 2 different angles. </string>


    <string name="male_snatch_desc">Males:-\n Video 1: Record yourself doing 1 rep with 135lb on the bar from 2 different angles.\n Video 2: Record yourself doing 1 rep with your body weight on the bar from 2 different angles.
</string>
    <string name="female_snatch_desc">Females:-\n Video 1: Record yourself doing 1 rep with 95 lb on the bar from 2 different angles.\n Video 2: Record yourself doing 1 rep with your body weight on the bar from 2 different angles. </string>


    <string name="male_cleanandjerk_desc">Males:-\n Video 1: Record yourself doing 1 rep with your body weight on the bar from 2 different angles.\n Video 2: Record yourself doing 1 rep with 1.5 your body weight on the bar from 2 different angles.
</string>
    <string name="female_cleanandjerk_desc">Females:-\n Video 1: Record yourself doing 1 rep with 95 lb on the bar from 2 different angles.\n Video 2: Record yourself doing 1 rep with your body weight on the bar from 2 different angles. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dummy_text">Train WHATEVER. WHEREVER. WHENEVER</string>
    <string name="name">name</string>
    <string name="number">number</string>


    <string name="com.twitter.sdk.android.CONSUMER_KEY">caJSdofGAha6GijAVY20TdhVy</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">dPeLY2CiFEct3mpBwl53eUqqla2fExnLYi558GymRLPdcjiEek</string>

    <string name="release_form_text">BUDDI INC. Waiver/Release 
RELEASE OF LIABILITY/ASSUMPTION OF RISK AGREEMENT
READ BEFORE SIGNING</string>
    <string name="release_form_text1">In consideration of being allowed to participate in any way in
\n\n(BUDDI INC. / BUDDI / BUDDI UNIVERSE / the BUDDI App’s)
\n\npersonal training, coaching, physical training, weight training, sports-related training, group training, and all other related events and activities, the undersigned acknowledges, appreciates, and agrees that: 
\n\n1) The risk of injury from the activities involved in this program is significant, including the potential for permanent paralysis and death, and while particular rules, equipment, and personal discipline may reduce this risk, the risk of serious injury does exist; and, 
\n\n2) I KNOWINGLY AND FREELY ASSUME ALL SUCH RISKS, both known and unknown, EVEN IF ARISING FROM THE NEGLIGENCE OF THE RELEASEES or others, and assume full responsibility for my participation; and, 
\n\n3) I willingly agree to comply with the stated and customary terms and conditions for participation. If, however, I observe any unusual significant hazard during my presence or participation, I will remove myself from participation and bring such to the attention of a medical professional immediately; and, 
\n\n4) I, for myself and on behalf of my heirs, assigns, personal representatives and next of kin, HEREBY RELEASE AND HOLD HARMLESS      BUDDI INC.      , their directors, officers, officials, agents, contractors, and/or employees, other participants, sponsoring agencies, sponsors, advertisers, and if applicable, owners and lessors of premises used to conduct the event (“RELEASEES”), WITH RESPECT TO ANY AND ALL INJURY, DISABILITY, DEATH, or loss or damage to person or property, WHETHER ARISING FROM THE NEGLIGENCE OF THE RELEASEES OR OTHERWISE, to the fullest extent permitted by law. </string>


    <string name="pbs_setup_title"><font fgcolor="#FFFF0000">$</font></string>

    <string name="release_form_text2">I HAVE READ THIS RELEASE OF LIABILITY AND ASSUMPTION OF RISK AGREEMENT, FULLY UNDERSTAND ITS TERMS, UNDERSTAND THAT I HAVE GIVEN UP SUBSTANTIAL RIGHTS BY SIGNING IT, AND SIGN IT FREELY AND VOLUNTARILY WITHOUT ANY INDUCEMENT. </string>

    <string name="release_form_text3">FOR PARTICIPANTS OF MINORITY AGE 
(UNDER AGE 18 AT THE TIME OF REGISTRATION) </string>
    <string name="release_form_text4">This is to certify that I, as parent/guardian with legal responsibility for this participant, do consent and agree to his/her release as provided above of all the Releasees, and for myself, my heirs, assigns, and next of kin, I release and agree to indemnify and hold harmless the Releasees from any and all liabilities incident to my minor child’s involvement or participation in these programs as provided above, EVEN IF ARISING FROM THEIR NEGLIGENCE, to the fullest extent permitted by law. </string>
</resources>
