<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="buddyapp.com.activity.questions.Question2">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/list_gym_sub"
            android:layout_height="wrap_content" />

<EditText
    android:layout_width="match_parent"
    android:id="@+id/gym"
    android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/access_military_instalations"
            android:layout_height="wrap_content" />

   <LinearLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_height="wrap_content">
       <Button
           android:layout_width="match_parent"
           android:layout_weight="1"
           android:id="@+id/yes_military_installations"
           android:text="@string/yes"
           android:layout_height="wrap_content" />
       <Button
           android:layout_width="match_parent"
           android:layout_weight="1"
           android:text="@string/no"
           android:id="@+id/no_military_installations"
           android:layout_height="wrap_content" />

   </LinearLayout>




    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:id="@+id/next"
        android:layout_height="wrap_content" />

</RelativeLayout>
