<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="buddyapp.com.activity.questions.VideoUploadActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_above="@id/bottom"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_height="match_parent">

<TextView
    android:layout_width="match_parent"
    android:id="@+id/desc"
    android:textSize="15dp"
    android:lineSpacingExtra="1dp"
    android:layout_margin="@dimen/small"
    android:text="@string/video_desc"
    android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/male_text"
        android:textSize="15dp"
        android:lineSpacingExtra="1dp"
        android:layout_margin="@dimen/small"
        android:text="@string/male_squat_desc"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/female_text"
        android:textSize="15dp"
        android:lineSpacingExtra="1dp"
        android:layout_margin="@dimen/small"
        android:text="@string/female_squat_desc"
        android:layout_height="wrap_content" />

</LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
      android:id="@+id/bottom"
        android:background="@color/grey"
        android:padding="@dimen/small"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:id="@+id/loadVideo"
            android:src="@drawable/ic_no_image"
            android:layout_height="50dp" />

        <ImageView
            android:layout_width="50dp"
            android:id="@+id/record"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/click"
            android:layout_height="50dp" />

<TextView
    android:layout_width="wrap_content"
    android:text="@string/upload"
    android:gravity="center"
    android:textAllCaps="true"
    android:id="@+id/upload"
    android:visibility="gone"
    android:textColor="@color/white"
    android:layout_alignParentRight="true"
    android:layout_height="50dp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_next"
            android:id="@+id/next"
            android:visibility="gone"
            android:layout_height="50dp" />




    </RelativeLayout>

</RelativeLayout>
