<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#f9f9f9"
    android:layout_height="match_parent"
    tools:context="buddyapp.com.activity.questions.Question3">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:id="@+id/back"
                android:layout_gravity="start"
                android:src="@drawable/ic_arrow_back_black_24dp"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="50dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/small"
                android:layout_toRightOf="@id/back"
                android:layout_marginBottom="10dp"
                android:textSize="21sp"
                android:text="@string/more_information"/>

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/subcat_title"
                android:text="@string/list_1rep_movement"
                android:layout_height="wrap_content" />
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="20dp"
              android:gravity="center">
             <buddyapp.com.utils.FullHeightListView
                 android:layout_width="wrap_content"
                 android:id="@+id/sub_list"
                 android:padding="5dp"
                 android:background="@drawable/round_corner_next_border"
                 android:layout_height="match_parent"/>




          </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/current_weight_text"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/small"
                android:paddingBottom="@dimen/small"
                android:orientation="horizontal">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="10dp"
                    android:id="@+id/hundreds"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ones"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/small"
                    android:text="lbs"/>
            </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/knowledge_text"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:layout_height="match_parent">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="10dp"
                    android:gravity="center"
                    android:id="@+id/spinner"/>
            </LinearLayout>
</LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/next"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/next"
        android:layout_alignParentBottom="true"
        android:background="@color/button_bgcolor"/>
</RelativeLayout>
