<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#f9f9f9"
    android:layout_height="match_parent"

    tools:context="buddyapp.com.activity.questions.Question1">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:id="@+id/back"
                android:layout_gravity="start"
                android:src="@drawable/ic_arrow_back_black_24dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="@dimen/small"
                android:layout_toRightOf="@id/back"
                android:textSize="21sp"
                android:text="@string/what_zipcode"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        android:weightSum="5">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_weight="1"
    android:gravity="center">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_question_location_map"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_weight="1"
    android:padding="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="12dp"
        android:text="@string/enter_zipcode"/>
<EditText
    android:layout_width="match_parent"
    android:id="@+id/zipcode"
    android:inputType="number"
    android:maxLength="5"
    android:backgroundTint="@color/colorPrimary"
    android:layout_height="wrap_content" />
</LinearLayout>


    </LinearLayout>
    </LinearLayout>
</ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/next"
        android:textAllCaps="true"
        android:background="@color/button_bgcolor"/>
</RelativeLayout>
